--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+management.endpoints.web.exposure.include   =*
+k1 = ${K1}
+k9   =v1
+k10   =v1
+k11   =v1
+k12   =v1
+k13   =v1
+k14   =v1
+k15   =v1
+k16   =v1
